<resources>
    <string name="app_name">nguyen_van_s_application2</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
<string name="lbl_l">L</string>
<string name="lbl_sport_dress">Sport Dress</string>
<string name="lbl_m">M</string>
<string name="msg_search_for_an_o">Search for an outfit by taking a photo or uploading an image</string>
<string name="lbl_knitwear">Knitwear</string>
<string name="lbl_united_states">United States</string>
<string name="lbl_summer_sales">SUMMER SALES</string>
<string name="lbl_s">S</string>
<string name="msg_3_newbridge_cou">3 Newbridge Court &#13;
Chino Hills, CA 91709, United States</string>
<string name="lbl_pullover">Pullover</string>
<string name="lbl_fashion_sale">Fashion
sale</string>
<string name="lbl_date_of_birth">Date of Birth</string>
<string name="lbl_23_ratings">23 ratings</string>
<string name="msg_5546_8205_3693">5546 8205 3693 3947</string>
<string name="lbl_write_a_review">Write a review</string>
<string name="msg_i_m_super_happy">I\u2019m super happy with these! I\u2019ve never bought jeans online before and I didn\u2019t think they\u2019d even fit, but it turns out they fit pretty perfectly. I got a size 28- I\u2019m 5\u20196\u201d and weigh about 127 lbs. They are tight but not suffocating ...</string>
<string name="lbl_t_shirt">T-Shirt</string>
<string name="lbl_new_password">New Password</string>
<string name="lbl_naf_naf">Naf Naf</string>
<string name="lbl_june_5_2019">June 5, 2019</string>
<string name="lbl_143">$143</string>
<string name="lbl_cvv">CVV</string>
<string name="lbl_mrmuff">mrmuff</string>
<string name="msg_rating_and_revi">Rating and reviews</string>
<string name="msg_repeat_new_pass">Repeat New Password</string>
<string name="lbl_shirts">Shirts</string>
<string name="lbl_52">52$</string>
<string name="lbl_edit">Edit</string>
<string name="lbl_summer">Summer</string>
<string name="lbl_51">51$</string>
<string name="msg_muffin_sweet_gm">muffin.sweet@gmail.com</string>
<string name="msg_you_ve_never_se">You\u2019ve never seen it before!</string>
<string name="lbl_55">55$</string>
<string name="msg_super_summer_sa">Super summer sale</string>
<string name="lbl_change">Change</string>
<string name="lbl_expire_date">Expire Date</string>
<string name="msg_i_loved_this_dr">"I loved this dress so much as soon as I tried it on I knew I had to buy it in another color. I am 5'3 about 155lbs and I carry all my weight in my upper body. When I put it on I felt like it thinned me put and I got so many compliments."</string>
<string name="lbl_133">133$</string>
<string name="lbl_men_s_hoodies">Men\u2019s
hoodies</string>
<string name="lbl_size">Size:</string>
<string name="lbl_h_m">H&amp;M</string>
<string name="lbl_summer2020">summer2020</string>
<string name="lbl_submit_order">SUBMIT ORDER</string>
<string name="lbl_expiry_date">Expiry Date</string>
<string name="msg_use_as_the_ship">Use as the shipping address</string>
<string name="msg_23_days_remaini">23 days remaining</string>
<string name="lbl_mypromocode2020">mypromocode2020</string>
<string name="lbl_item_details">Item details</string>
<string name="lbl_visa_34">Visa  **34</string>
<string name="msg_longsleeve_viol">Longsleeve Violeta</string>
<string name="lbl_price_range">Price range</string>
<string name="lbl_45">45$</string>
<string name="lbl_46">46$</string>
<string name="lbl_43">43$</string>
<string name="lbl_reorder">Reorder</string>
<string name="lbl_summer_sale2">Summer Sale</string>
<string name="lbl_122">12</string>
<string name="lbl_124">124$</string>
<string name="lbl_berries">&amp;Berries</string>
<string name="lbl_127">127$</string>
<string name="lbl_blouse">Blouse</string>
<string name="lbl_sort_by">Sort by</string>
<string name="lbl_jack_jones">Jack &amp; Jones</string>
<string name="lbl_brand">Brand</string>
<string name="lbl_details">Details</string>
<string name="lbl_delivery_method">Delivery method</string>
<string name="msg_forgot_your_pas">Forgot your password?</string>
<string name="lbl_size2">Size</string>
<string name="lbl_mr_muffin">Mr. Muffin</string>
<string name="lbl_shirt2">Shirt </string>
<string name="msg_state_province">State/Province/Region</string>
<string name="lbl_30">30$</string>
<string name="lbl_lime">LIME</string>
<string name="lbl_with_photo">With photo</string>
<string name="msg_51_riverside_c">51 Riverside&#13;
Chino Hills, CA 91709, United States</string>
<string name="lbl_topshop">Topshop</string>
<string name="lbl_new_collection">New collection</string>
<string name="lbl_34">34$</string>
<string name="lbl_card_number">Card number</string>
<string name="msg_your_payment_ca">Your payment cards</string>
<string name="lbl_32">32$</string>
<string name="lbl_33">3</string>
<string name="lbl_shipping_info">Shipping info</string>
<string name="lbl_color">Color:</string>
<string name="lbl_password">Password</string>
<string name="msg_cardigans_swe">Cardigans &amp; Sweaters</string>
<string name="lbl_39">39$</string>
<string name="lbl_112">112$</string>
<string name="lbl_new_arrivals">New arrivals</string>
<string name="lbl_size_info">Size info</string>
<string name="lbl_tops">Tops</string>
<string name="msg_or_sign_up_with">Or sign up with social account</string>
<string name="lbl_apply">Apply</string>
<string name="lbl_12_items">12 items</string>
<string name="lbl_city">City</string>
<string name="lbl_check_out">CHECK OUT</string>
<string name="lbl_20">-20% </string>
<string name="lbl_category">Category</string>
<string name="msg_about_the_produ">about the product</string>
<string name="lbl_save_password">SAVE PASSWORD</string>
<string name="lbl_21">21$</string>
<string name="lbl_upload_an_image">UPLOAD AN IMAGE</string>
<string name="lbl_22">22$</string>
<string name="lbl_05_12_2019">05-12-2019</string>
<string name="msg_you_have_specia">You have special promocodes</string>
<string name="lbl_discount">Discount:</string>
<string name="msg_card_holder_nam">Card Holder Name</string>
<string name="lbl_categories">Categories</string>
<string name="lbl_helene_moore">Helene Moore</string>
<string name="lbl_email2">email2</string>
<string name="lbl_send_review">SEND REVIEW</string>
<string name="lbl_color_orange">Color: Orange</string>
<string name="lbl_login2">LOGIN</string>
<string name="lbl_12">12$</string>
<string name="lbl_12_12_1989">12/12/1989</string>
<string name="lbl_10">10$</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_sign_up2">SIGN UP</string>
<string name="lbl_send">SEND</string>
<string name="msg_zip_code_posta">Zip Code (Postal Code)</string>
<string name="lbl_17">17$</string>
<string name="lbl_14">14$</string>
<string name="lbl_matilda_brown">Matilda Brown</string>
<string name="lbl_15">15$</string>
<string name="lbl_checkout2">Checkout</string>
<string name="lbl_t_shirt_sailing">T-Shirt Sailing</string>
<string name="lbl_quantity">Quantity:</string>
<string name="lbl_19">19$</string>
<string name="lbl_discard">Discard</string>
<string name="msg_6_days_remainin">6 days remaining</string>
<string name="lbl_pants">Pants</string>
<string name="lbl_color_black">Color: Black</string>
<string name="lbl_diesel">Diesel</string>
<string name="msg_set_as_default">Set as default payment method</string>
<string name="lbl_colors">Colors</string>
<string name="lbl_success">Success!</string>
<string name="lbl_add_to_cart">ADD TO CART</string>
<string name="lbl_02">0</string>
<string name="lbl_lost_ink">LOST Ink</string>
<string name="lbl_check">Check</string>
<string name="msg_shipping_addres">Shipping address</string>
<string name="lbl_3_items">3 items</string>
<string name="lbl_select_size">Select size</string>
<string name="lbl_up_to_50_off">Up to 50% off</string>
<string name="lbl_crop_tops">Crop tops</string>
<string name="msg4">* * * *  * * * *  * * * *  4546</string>
<string name="msg3">* * * *  * * * *  * * * *</string>
<string name="msg_short_black_dre">Short black dress</string>
<string name="msg2">* * * *  * * * *  * * * *  3947</string>
<string name="lbl_cool">Cool </string>
<string name="lbl_champion">Champion</string>
<string name="msg_the_dress_is_gr2">fixbug</string>
<string name="msg5">****************</string>
<string name="lbl_3947">  3947</string>
<string name="lbl_settings">Settings</string>
<string name="lbl_choose_category">Choose category</string>
<string name="msg_adidas_original">adidas Originals, Jack &amp; Jones, s.Oliver</string>
<string name="lbl_evening_dress">Evening Dress</string>
<string name="lbl_order_details">Order Details</string>
<string name="lbl_outerwear">Outerwear</string>
<string name="lbl_t_shirt_spanish">T-Shirt SPANISH</string>
<string name="lbl_shirt">Shirt</string>
<string name="lbl_visual_search">Visual search</string>
<string name="lbl_152">-15% </string>
<string name="lbl_blazers">Blazers</string>
<string name="lbl_153">15</string>
<string name="lbl_shop">Shop</string>
<string name="lbl_summer_sale">Summer
sale</string>
<string name="lbl_crop_the_item">Crop the item</string>
<string name="lbl_adidas">adidas</string>
<string name="lbl_home">Home</string>
<string name="lbl_kim_shine">Kim Shine</string>
<string name="lbl_clothes">Clothes</string>
<string name="msg_already_have_an">Already have an account?</string>
<string name="msg_sorry_this_ite2">Sorry, this item is currently 
sold out</string>
<string name="lbl_country">Country</string>
<string name="lbl_302">-30% </string>
<string name="lbl_91709">91709</string>
<string name="lbl_ovs">OVS</string>
<string name="lbl_helpful">Helpful</string>
<string name="lbl_off"> off</string>
<string name="msg_adding_shipping">Adding Shipping Address</string>
<string name="msg_already_have_12">Already have 12 orders</string>
<string name="msg_you_can_also_li">You can also like this</string>
<string name="lbl_total_amount2">Total Amount:</string>
<string name="lbl_total_amount">Total amount:</string>
<string name="lbl_women">Women</string>
<string name="lbl_order">Order:</string>
<string name="lbl_notifications">Notifications</string>
<string name="lbl_units_1">Units: 1</string>
<string name="lbl_iw3475453455">IW3475453455</string>
<string name="msg_forgot_password">Forgot Password?  </string>
<string name="lbl_3_ddresses">3 ddresses</string>
<string name="lbl_save_address">SAVE ADDRESS</string>
<string name="msg_10_personal_p">10%, Personal promo code</string>
<string name="msg_personal_inform">Personal Information</string>
<string name="msg_continue_shoppi">Continue shopping</string>
<string name="lbl_your_review">Your review</string>
<string name="lbl_august_13_2019">August 13, 2019</string>
<string name="lbl_support">Support</string>
<string name="lbl_my_orders2">My orders</string>
<string name="msg_short_dress_in">Short dress in soft cotton jersey with decorative buttons down the front and a wide, frill-trimmed square neckline with concealed elastication. Elasticated seam under the bust and short puff sleeves with a small frill trim.</string>
<string name="msg_price_highest">Price: highest to low</string>
<string name="lbl_2_3_days"> 2-3 days</string>
<string name="lbl_old_password">Old Password</string>
<string name="msg_delete_from_the">Delete from the list</string>
<string name="lbl_california">California</string>
<string name="lbl_kate_doe">Kate Doe</string>
<string name="lbl_personal_offer">Personal offer</string>
<string name="lbl_103">10</string>
<string name="lbl_newest">Newest</string>
<string name="lbl_order_1947034">Order №1947034</string>
<string name="lbl_delivered">Delivered</string>
<string name="lbl">%</string>
<string name="lbl_customer_review">Customer review</string>
<string name="lbl_jane_doe">Jane Doe</string>
<string name="lbl_popular">Popular</string>
<string name="msg_price_lowest_t">Price: lowest to high</string>
</resources>