<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listorder1947034RowModel" type="com.nguyenvansapplication.app.modules.myprofilemyorders.data.model.Listorder1947034RowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearOrderCard"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_4">
        <LinearLayout android:id="@+id/linearRoworder1947034"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtOrder1947034"
                android:layout_height="wrap_content"
                android:layout_weight="0.65" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{listorder1947034RowModel.txtOrder1947034}"
                style="@style/txtMetropolissemibold16" tools:text="@string/lbl_order_1947034"/>
            <TextView android:ellipsize="end" android:id="@+id/txtDate"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.35" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:text="@{listorder1947034RowModel.txtDate}"
                style="@style/txtMetropolisregular14" tools:text="@string/lbl_05_12_2019"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/linearRow"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:id="@+id/linearRowquantity"
                android:layout_height="wrap_content"
                android:layout_weight="0.37" android:layout_width="0dp" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtQuantity"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.86"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{listorder1947034RowModel.txtQuantity}"
                    style="@style/txtMetropolisregular14" tools:text="@string/lbl_quantity"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtThree"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_weight="0.14"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{listorder1947034RowModel.txtThree}"
                    style="@style/txtMetropolissemibold16" tools:text="@string/lbl_33"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowtotalamount"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_86pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.63" android:layout_width="0dp" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTotalAmount"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.74"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{listorder1947034RowModel.txtTotalAmount}"
                    style="@style/txtMetropolisregular14" tools:text="@string/lbl_total_amount2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_weight="0.26"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{listorder1947034RowModel.txtPrice}"
                    style="@style/txtMetropolissemibold16" tools:text="@string/lbl_112"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowdetails"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnDetails"
                android:layout_height="@dimen/_36pxv"
                android:layout_width="@dimen/_98pxh"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_24pxh"
                android:paddingStart="@dimen/_26pxh"
                android:paddingTop="3dp"
                android:singleLine="true"
                android:text="@string/lbl_details"
                android:textAllCaps="false"
                style="@style/btnRoundedOutline" tools:text="@string/lbl_details"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDeliveredOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginStart="@dimen/_143pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.4" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{listorder1947034RowModel.txtDeliveredOne}"
                style="@style/txtMetropolismedium14_4" tools:text="@string/lbl_delivered"/>
        </LinearLayout>
    </LinearLayout>
</layout>
