<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listname2RowModel" type="com.nguyenvansapplication.app.modules.shippingaddresses.data.model.Listname2RowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearAddresscardAc"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
        <LinearLayout android:id="@+id/linearRowname"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtName"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.71" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{listname2RowModel.txtName}"
                style="@style/txtMetropolismedium14" tools:text="@string/lbl_jane_doe"/>
            <TextView android:ellipsize="end" android:id="@+id/txtEdit"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_200pxh"
                android:layout_weight="0.29" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{listname2RowModel.txtEdit}"
                style="@style/txtMetropolismedium14_3" tools:text="@string/lbl_edit"/>
        </LinearLayout>
        <TextView android:id="@+id/txtAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_28pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:text="@{listname2RowModel.txtAddress}"
            style="@style/txtMetropolisregular14_1" tools:text="@string/msg_3_newbridge_cou"/>
    </LinearLayout>
</layout>
